feat: build and some mechanics working

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "space-warrior",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://PrieTorres.github.io/space-warrior",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -15,6 +16,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -40,6 +43,7 @@
   },
   "devDependencies": {
     "eslint-plugin-prettier": "^5.0.0",
+    "gh-pages": "^6.0.0",
     "prettier": "^3.0.0"
   }
 }
